# example-golioth

./: .gitignore  CMakeLists.txt  README.md  pm_static.yml  prj.conf  west-ncs.yml
boards/: thingy91_nrf9160_ns.conf
pipelines/: accel-s3.yml  class-lightdb-stream.yml
src/: main.cpp
